feat: 增加 calendar_padding_bottom 属性

--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,22 @@
 
 buildscript {
     repositories {
+        // 阿里云maven
+        maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url "https://maven.aliyun.com/repository/central" }
+        maven { url "https://maven.aliyun.com/repository/google" }
+        maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
+
+        // jitpack
+        maven { url "https://jitpack.io" }
+
         jcenter()
         google()
     }
     dependencies {
         //noinspection GradleDependency
         classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
